# PyCharm_Coder

./: README.md  git_push.sh
7天零基础代码/: 11.3.py  Demo.html  Demo.py  ddd.html  lesson2.py  test.py  zuoye.py  定位具有检测函数自身的代码.js  简历生成器.py  问答式简历.py
7天零基础代码/Demo-第八次课/: demo.py  sum.py
7天零基础代码/lesson011031/: function_str.py  input_fun.py  lesson01.py  lesson02.py  lesson03.py  list_tester.py  set_tester.py  slice_terster.py  str_tester.py  type_tester.py
7天零基础代码/lesson021101/: count_list.py  dict_tester.py  format_tester.py  lesson01.py  list_slice_tester.py  list_slice_tester_plus.py  print_tester.py  tuple_test.py
7天零基础代码/lesson031104/: enumerate_for.py  for_ttester.py  function_tester.py  lesson01.py  list_test.py  range_tester.py  while_i.py
7天零基础代码/test/: Demo2020.txt  Project_1.py  Test.txt  Tester_1.py  addfun  demo.py  demo1.py  demo22.py  llllllll.py  project1.py
7天零基础代码/题目辅导/: 6-2.py  Play_Game.py  sum_function.py
CQCcqc_Coder/MaoYan/: result.txt
Coder_Old/: 抽奖随机数.py
OnlinePythonTutor/: history.txt  unsupported-features.md  wishlist.md
Personal_Practice_Code/: Untitled.ipynb
The_60_day_path_to_mastery_of_Python_full_stack/: README.md
YuQue_Coder/: requests_yuque_repo.py
aiyuechuang_lesson/: slice_mp3.py
人人都能学数据分析/: 001.py  01.xls  Tester.py  out给梦梦.xlsx  未命名.ipynb
玩转办公自动化/: email_tester.py
网易云课堂/猿人学/资料/yuaren-online-judge-2020/YuanrenXue2020/src/main/cpp/: CMakeLists.txt
网易云课堂/猿人学/资料/yuaren-online-judge-2020/YuanrenXue2020/src/main/cpp/src/: Base64.cpp  Base64.h  OnlineJudge.cpp
课程目录 MD/: Python 核心实战.md  Python 算法入门.md
(+44573 files in other folders)
